sfSandBoxCode/force-app/main/default/objects/Employee_Disciplinary_Information__c/Employee_Disciplinary_Information__c.object-meta.xml
<CustomObject>
    <description>Employee Disciplinary Information</description>
    <label>Employee Disciplinary Information</label>
    <nameField>
        <displayFormat>DI-{00000000}</displayFormat>
        <label>Employee Disciplinary Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Disciplinary Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>