sfSandBoxCode/force-app/main/default/objects/Employee_Disciplinary_Information__c/fields/Date_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Action_Taken__c</fullName>
    <description>Date Action Taken</description>
    <inlineHelpText>Date Action Taken</inlineHelpText>
    <label>Date Action Taken</label>
    <required>true</required>
    <type>Date</type>
</CustomField>