sfSandBoxCode/force-app/main/default/objects/Employee_Disciplinary_Information__c/fields/Details_of_Appeal_And_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Appeal_And_Remarks__c</fullName>
    <description>Details of Appeal And Remarks (Max 1000 chars)</description>
    <inlineHelpText>Details of Appeal And Remarks (Max 1000 chars)</inlineHelpText>
    <label>Details of Appeal And Remarks</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>