sfSandBoxCode/force-app/main/default/objects/Employee_Disciplinary_Information__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Employee</description>
    <inlineHelpText>Employee Name</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Disciplinary Information</relationshipLabel>
    <relationshipName>Employee_Disciplinary_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>