sfSandBoxCode/force-app/main/default/objects/Employee_Disciplinary_Information__c/fields/Reason_for_Disciplinary_Action__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Disciplinary_Action__c</fullName>
    <description>Reason for Disciplinary Action (Max 1000 chars)</description>
    <inlineHelpText>Reason for Disciplinary Action (Max 1000 chars)</inlineHelpText>
    <label>Reason for Disciplinary Action</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>