sfSandBoxCode/force-app/main/default/objects/Employee_Disciplinary_Information__c/fields/Type_Of_Action__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Action__c</fullName>
    <description>Type Of Action</description>
    <inlineHelpText>Type Of Action</inlineHelpText>
    <label>Type Of Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demotion</fullName>
            </value>
            <value>
                <fullName>Final Warning Letter</fullName>
            </value>
            <value>
                <fullName>First Warning Letter</fullName>
            </value>
            <value>
                <fullName>Salary Reduction</fullName>
            </value>
            <value>
                <fullName>Summary Dismissal</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Verbal Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>